<resources>
    <string name="app_name">YeutSen</string>
    <string name="skip">SKIP</string>
    <string name="start">START</string>
    <string name="begin">GOT IT</string>


    <string name="slide_1_title">Set up to this application</string>
    <string name="slide_1_desc">set up time in and out to working in day , working day and time alert before to use this application  because to alert to target  </string>

    <string name="slide_2_title">Main  application</string>
    <string name="slide_2_desc">show many stance to stretch for user to use be example stance in application and have button timer in to alert show dialog to application</string>

    <string name="slide_3_title">Detail application</string>
    <string name="slide_3_desc">detail many stance  stretch to allow users to see each gesture in order to work this application</string>

    <string name="slide_4_title">Summary application</string>
    <string name="slide_4_desc">It is concluded that the information presented many times in stretch</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>





    <!--Register-->
    <string name="morning_time">SET WORKING IN DAY </string>
    <string name="afternoon_time">AFTERNOON TIME</string>
    <string name="morning_on">START </string>
    <string name="morning_off">FINISH</string>

    <!--checkbox in day-->
    <string name="text_sunday">Sunday</string>
    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tuesday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>

    <string name="working_day">Working Day</string>
    <string name="confirm">SAVE</string>
    <string name="Text">TEXT</string>


    <!--Notification-->
    <string name="new_message_notification">new message notification</string>
    <string name="Ringtone">Ringtone</string>
    <string name="Time_Notification">Time Notification</string>
    <string name="vibrate">Vibrate</string>

    <!--Button-->
    <string name="Select">Select</string>
    <string name="Cancel">Cancel</string>


    <string name="Name">Name</string>
    <string name="set_time">Set Time</string>
    <string name="tutorial">Tutorial</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="summary">Summary</string>
    <string name="pirates">15 minutes</string>
    <string name="ninjas">30 minutes</string>
    <string name="notification_name">Time Alert</string>
    <string name="jaja">45 minutes</string>
    <string name="Slove">Slove</string>
    <string name="Edit">Edit</string>
    <string name="current">Current Version</string>
    <string name="version">1.0.0</string>
    <string name="current_detail">About Us</string>
    <string name="time_frist">30 minutes</string>
    <string name="time_first">30 minutes</string>
    <string name="time_second">45 minutes</string>
    <string name="time_third">60 minutes</string>
    <string name="name_yuetsen">Register Set Time</string>
    <string name="set_edit_time">Set Time Alert For The Notification </string>
    <string name="set_all_day">Set Working Day</string>
    <string name="Topic">Detail</string>
    <string name="Topic_Detail">     Yuetsen is an application that helps you to stretch in the working time. The purpose is to prevent user sitting in front of a computer for a long time that can cause eye problems and office syndrome. This application will alert and show gesture to a user to follow how to stretch and the user can change gesture. This taking a little time to stretch for a good health.</string>
    <string name="benefit">Benefit</string>
    <string name="origin">Origin</string>
    <string name="credit">Credit</string>
    <string name="Topic_credit">Augmentis Company Thailand</string>
    <string name="btn_finish">Finish</string>
    <string name="txt_moving">Welcome to YeutSen Application . . .</string>


</resources>
