<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/notification_id"

    >

    <TextView
        android:id="@+id/setting_stretching_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_message_notification"
        android:textSize="22sp"/>

    <Switch
        android:id="@+id/setting_stretching_witch_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/setting_stretching_text_ring_tone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_stretching_text_message"
        android:textSize="22sp"
        android:text="@string/Ringtone"/>

    <TextView
        android:id="@+id/setting_stretching_text_style_ring_tone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_stretching_text_ring_tone"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/setting_stretching_text_time_style_ring_tone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_stretching_text_style_ring_tone"
        android:text="@string/Time_Notification"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/setting_stretching_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_stretching_text_time_style_ring_tone"
        android:textSize="22sp"
        android:text="@string/vibrate"/>

    <Switch
        android:id="@+id/setting_stretching_switch_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/setting_stretching_text_time_style_ring_tone"/>



</RelativeLayout>