<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >


    <Button
        android:id="@+id/enter_working"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/confirm"
        android:background="@drawable/button_shape"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        />

    <LinearLayout
        android:id="@+id/view_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_yuetsen"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/primary_dark"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="?android:listSeparatorTextViewStyle"
            android:layout_marginTop="15dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <ImageView
                    android:layout_marginLeft="8dp"
                    android:layout_width="24sp"
                    android:layout_height="29sp"
                    android:src="@drawable/time_morning"/>

                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/text_view_morning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/morning_time"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <Button
                android:id="@+id/button_time_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/morning_on"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/white"
                    android:background="@drawable/button_shape"
                />




                <Button
                    android:id="@+id/button_time_out"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/morning_off"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_shape"
                     />
            </LinearLayout>




        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--style="?android:listSeparatorTextViewStyle"-->

            <!--&gt;-->


            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_margin="5dp">-->

                <!--<ImageView-->
                    <!--android:layout_width="24sp"-->
                    <!--android:layout_height="28sp"-->
                    <!--android:src="@drawable/time_afternoon"-->
                    <!--/>-->

                <!--<TextView-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/afternoon_time"-->
                    <!--android:textSize="25sp"-->
                    <!--android:textStyle="bold"/>-->

            <!--</LinearLayout>-->





            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_margin="15dp">-->

                <!--<Button-->
                    <!--android:id="@+id/button4"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="4"-->
                    <!--android:text="@string/morning_on"-->
                    <!--android:textSize="24sp"-->
                    <!--android:gravity="center"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:background="@drawable/button_shape"-->
                    <!--/>-->




                <!--<Button-->
                    <!--android:id="@+id/button6"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="4"-->
                    <!--android:text="@string/morning_off"-->
                    <!--android:textSize="24sp"-->
                    <!--android:gravity="center"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:background="@drawable/button_shape"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--/>-->
            <!--</LinearLayout>-->




        <!--</LinearLayout>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            style="?android:listSeparatorTextViewStyle"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="24sp"
                        android:layout_height="28sp"
                        android:src="@drawable/calendar"/>

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Working day"
                        android:textSize="25sp"/>

                </LinearLayout>






            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sunday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/white_sunday"
                    />

                <ImageView
                    android:id="@+id/monday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/white_monday"/>
                <ImageView
                    android:id="@+id/tuesday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/white_tuesday"/>
                <ImageView
                    android:id="@+id/wednesday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/white_wednesday"/>
                <ImageView
                    android:id="@+id/thursday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/white_thursday"/>
                <ImageView
                    android:id="@+id/friday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/white_friday"/>
                <ImageView
                    android:id="@+id/saturday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/white_saturday"/>

            </LinearLayout>




        </LinearLayout>









        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="?android:listSeparatorTextViewStyle"
            android:layout_marginTop="14dp"

            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"

                >


                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="29sp"
                    android:src="@drawable/alarm"
                    />


                <TextView
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:id="@+id/notification_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_name"
                    android:textSize="25sp" />




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="23dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_edit_time"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >
                <com.github.channguyen.rsv.RangeSliderView

                android:id="@+id/SeekBar_time_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"




                    />
                <RelativeLayout
                    android:layout_marginTop="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_marginTop="1dp"
                        android:layout_marginLeft="63dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="30"
                        android:layout_marginBottom="10dp"
                        />
                    <TextView
                        android:layout_margin="1dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="45"
                        android:layout_marginBottom="10dp"
                        />
                    <TextView
                        android:layout_marginTop="1dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingRight="64dp"
                        android:text="60"
                        android:layout_marginBottom="10dp"
                        />

                    </RelativeLayout>



            </RelativeLayout>








        </LinearLayout>




        <!--<RadioGroup-->
            <!--android:id="@+id/radio_group"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->

            <!--<RadioButton-->
                <!--android:id="@+id/radio_one"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/time_first" />-->

            <!--<RadioButton-->

                <!--android:id="@+id/radio_two"-->

                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/time_second" />-->

            <!--<RadioButton-->

                <!--android:id="@+id/radio_three"-->

                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/time_third" />-->
        <!--</RadioGroup>-->

    </LinearLayout>


</RelativeLayout>

